// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DriverCode contains the actualLanguage URL if is auto 1`] = `
<div
  className="sc-gzVnrw ipAWFv"
>
  <img
    alt="GitHub"
    src="github.svg"
  />
  <a
    className="sc-htoDjs cqFtEe"
    href="Python.driver"
    target="_blank"
  >
    Driver Code
  </a>
</div>
`;

exports[`DriverCode contains the driver URL if selectedLanguage is not auto 1`] = `
<div
  className="sc-gzVnrw ipAWFv"
>
  <img
    alt="GitHub"
    src="github.svg"
  />
  <a
    className="sc-htoDjs cqFtEe"
    href="Java.driver"
    target="_blank"
  >
    Driver Code
  </a>
</div>
`;

exports[`Header has the button disabled if is loading 1`] = `
<header
  className="sc-bdVaJa NEwed"
>
  <h1
    className="sc-bwzfXH fNOhzS"
  >
    <img
      alt="bblfsh"
      className="sc-htpNat iZWaVz"
      src="babelfish_logo.svg"
    />
    <span
      className="sc-bxivhb djfHVK"
    >
      Dashboard
    </span>
  </h1>
  <div
    className="sc-ifAKCX jZWuLM"
  >
    <div
      className="sc-EHOje kQCbIR"
    >
      <label>
        Language:
      </label>
      <select
        onChange={undefined}
        value="auto"
      >
        <option
          value="auto"
        >
          Python auto
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="java"
        >
          Java
        </option>
      </select>
      <div
        className="sc-gzVnrw ipAWFv"
      >
        <img
          alt="GitHub"
          src="github.svg"
        />
        <a
          className="sc-htoDjs cqFtEe"
          href="Python.driver"
          target="_blank"
        >
          Driver Code
        </a>
      </div>
    </div>
    <div
      className="sc-EHOje kQCbIR"
    >
      <button
        className="sc-bZQynM dwMcDi"
        disabled={true}
        id="run-parser"
        onClick={undefined}
      >
        Run parser
      </button>
    </div>
  </div>
</header>
`;

exports[`Header renders correctly 1`] = `
<header
  className="sc-bdVaJa NEwed"
>
  <h1
    className="sc-bwzfXH fNOhzS"
  >
    <img
      alt="bblfsh"
      className="sc-htpNat iZWaVz"
      src="babelfish_logo.svg"
    />
    <span
      className="sc-bxivhb djfHVK"
    >
      Dashboard
    </span>
  </h1>
  <div
    className="sc-ifAKCX jZWuLM"
  >
    <div
      className="sc-EHOje kQCbIR"
    >
      <label>
        Language:
      </label>
      <select
        onChange={undefined}
        value="auto"
      >
        <option
          value="auto"
        >
          Java auto
        </option>
        <option
          value="python"
        >
          Python
        </option>
        <option
          value="java"
        >
          Java
        </option>
      </select>
      <div
        className="sc-gzVnrw ipAWFv"
      >
        <img
          alt="GitHub"
          src="github.svg"
        />
        <a
          className="sc-htoDjs cqFtEe"
          href="Java.driver"
          target="_blank"
        >
          Driver Code
        </a>
      </div>
    </div>
    <div
      className="sc-EHOje kQCbIR"
    >
      <button
        className="sc-bZQynM dwMcDi"
        disabled={undefined}
        id="run-parser"
        onClick={undefined}
      >
        Run parser
      </button>
    </div>
  </div>
</header>
`;
